--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
+    "netlify": "netlify dev",
     "start": "node app.js"
   },
   "keywords": [],
@@ -19,6 +20,8 @@
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "ip": "^1.1.8",
+    "netlify-cli": "^16.9.2",
+    "netlify-lambda": "^2.0.16",
     "request-ip": "^3.3.0",
     "xss-clean": "^0.1.4"
   },
