--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,10 @@
 #     from = "/api/*"
 #     to = "/.netlify/functions/:splat"
 #     status = 200
+[[redirects]]
+    from = "/"
+    to = "/.netlify/functions/app/getip"
+    status = 200
 
 # [[redirects]]
 #     from = "/*"
